test_files/should_fail/wrong_version.wpdoc
{
  "version": 999,
  "text": "Future version that doesn't exist yet",
  "style": {
    "bold": false,
    "italic": false
  }
}
